# estrutura-de-dados-2

./: CMakeLists.txt  README.md
1-arvores-conceito/: arvore.c  arvore.h  main.c
10-grafos-busca-em-profundidade-largura/: grafo.c  grafo.h  main.c
2-arvores-binarias-de-busca/: abb.c  abb.h  main.c
3-arvores-balanceadas-avl/: avl.c  avl.h  main.c
5-heap-and-heap-sort/: heap.c  heap.h  main.c
6-filas-de-prioridade/: max_heap  max_heap.c  min_heap  min_heap.c
8-tabelas-hash/: hash.c  hash.h  main.c
9-grafos-conceitos/: grafo.c  grafo.h  main.c
